			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * ENHANCED: Various issues around findall/3, bagof/3 and setof/3.  Not
    yet fully tested.

  * ADDED: findall/4.  Ulrich Neumerkel.

================================
VERSION 5.6.39 (August 08, 2007)
================================

  * FIXED: Windows: handling of //host.domain/path filenames.  Dave Eyers.

  * FIXED: Exception from call(1, a, b).  Ulrich Neumerkel.

  * ENHANCED: Trivial extra check in unify_with_occurs_check/2 to speed up
    a common case.  Ulrich Neumerkel.

  * MODIFIED:  Various issues in the Windows version.  Prolog now starts
    in <personal>\Prolog (typicall My Documents\Prolog) and personal settings
    is in <appdata>\SWI-Prolog (pl.ini) and <appdata>\xpce (Defaults,
    Geometry, emacs_bookmarks, etc.) <appdata> is typically called
    Application Data.  Michael Covington.

  * FIXED: plwin.exe, non-functioning <RETURN> in tracer and toplevel.
    Pierpaolo Bernardi

================================
VERSION 5.6.38 (August 02, 2007)
================================

  * FIXED: Bug in retract/1, combining unit clauses and non-unit clauses.

  * FIXED: rl_add_history for non-UTF-8 locales.  Ulrich Neumerkel.

  * ENHANCED: Turned Prolog flags into linked objects in the manual.
    Ulrich Neumerkel.

  * FIXED: abort from various built-ins dealing with cyclic terms.
    Ulrich Neumerkel.

  * FIXED: Type error from apply/2.  Ulrich Neumerkel.

  * FIXED: indexing issues with dynamic predicate with few clauses.
    Could lead to unindexed and therefore non-deterministic code that
    should be deterministic. Ulrich Neumerkel.

  * MODIFIED: Deleted outdated flag gnu_libpthread_version.

  * MODIFIED: Renamed flag 'tail_recursion_optimisation' to